--- a/homePageStaff.html
+++ b/homePageStaff.html
@@ -1,4 +1,98 @@
-<html>
-  <head></head>
-  <body></body>
-  </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to MedicHub</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
+		* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    background-color: #f2f2f2;
+    color: #262626;
+}
+
+header {
+    background: linear-gradient(-135deg, #c850c0, #4158d0);
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+}
+
+header h1 {
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+nav {
+    margin-top: 20px;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}
+
+nav ul li {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+nav ul li a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.nav-button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.nav-button img {
+    width: 30px; /* Adjust size as needed */
+    height: 30px; /* Adjust size as needed */
+    filter: invert(100%); /* Set the icon color to white */
+}
+
+.button:hover {
+    background-color: #fff; /* Change to white */
+}
+
+
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to MedicHub</h1>
+        <nav>
+            <ul>
+                <li><a href "xxxxxx" class="nav-button" id="left-button"><img src="https://cdn-icons-png.flaticon.com/128/93/93634.png" alt="Left"></button></li>
+                <li><a href="#" id="about-us-link">About Us</a></li>
+                <li><a href="#" id="services-link">Services</a></li>
+                <li><a href="#" id="contact-link">Contact</a></li>
+                <li><a href="xxxxxxx" class="nav-button" id="right-button"><img src="https://cdn-icons-png.flaticon.com/128/1250/1250699.png" alt="Right"></a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
+</html>
+
