--- a/homePageStaff.html
+++ b/homePageStaff.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
-		* {
+	* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -93,6 +93,12 @@ nav ul li a:hover {
             </ul>
         </nav>
     </header>
+	<div classs = "container">
+		<div class = "sidebar">
+			<button> MEDICAL RECORD </button>
+			<button> MEDICAL CERTIFICATE </button>
+			<button> PATIENT DATA </button>
+			<button> MEDICINE </button>
 </body>
 </html>
 
