--- a/patientRegistration.html
+++ b/patientRegistration.html
@@ -7,6 +7,7 @@
 <title>Patient Registration</title>
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
 <style>
+  /* Existing CSS code */
   * {
     margin: 0;
     padding: 0;
@@ -150,6 +151,16 @@
     color: #fff;
   }
 
+  .form .back-button {
+    margin-top: 10px;
+    background: #f2f2f2;
+    color: rgb(130, 106, 251);
+  }
+
+  .form .back-button:hover {
+    background: rgb(200, 200, 200);
+  }
+
   /* Responsive */
   @media screen and (max-width: 768px) {
     .form {
@@ -169,62 +180,51 @@
 </header>
 
 <section class="container">
-  <form action="mainPageForm.html" class="form" onsubmit="return redirect()">
+<form action="registerPat.php" method="POST" class="form" onsubmit="return showMessage()">
     <div class="input-box">
-      <label>Full Name</label>
-      <input type="text" placeholder="Enter full name" required />
+      <label>Patient NRIC</label>
+      <input type="text" name="patientNRIC" placeholder="Enter NRIC" required />
     </div>
 
     <div class="input-box">
-      <label>Email Address</label>
-      <input type="email" placeholder="Enter email address" required />
+      <label>Full Name</label>
+      <input type="text" name="fullName" placeholder="Enter full name" required />
     </div>
 
     <div class="input-box">
       <label>Phone Number</label>
-      <input type="tel" placeholder="Enter phone number" required />
+      <input type="tel" name="phoneNumber" placeholder="Enter phone number" required />
     </div>
 
     <div class="input-box">
-      <label>Birth Date</label>
-      <input type="date" required />
+      <label>Address</label>
+      <input type="text" name="address" placeholder="Enter address" required />
     </div>
 
     <div class="input-box">
       <label>Password</label>
-      <input type="password" placeholder="Enter password" required />
+      <input type="password" name="password" placeholder="Enter password" required />
     </div>
 
     <div class="input-box">
       <label>Confirm Password</label>
-      <input type="password" placeholder="Confirm password" required />
+      <input type="password" name="confirmPassword" placeholder="Confirm password" required />
     </div>
 
-    <div class="gender-box">
-      <h3>Gender</h3>
-      <div class="gender-option">
-        <div class="gender">
-          <input type="radio" id="check-male" name="gender" checked />
-          <label for="check-male">Male</label>
-        </div>
-        <div class="gender">
-          <input type="radio" id="check-female" name="gender" />
-          <label for="check-female">Female</label>
-        </div>
-        
-      </div>
+    <div class="input-box">
+      <button type="button" onclick="window.location.href='mainPageForm.html'">Back to Login</button>
     </div>
 
-    
-
-    <button type="submit">Submit</button>
-  </form>
+    <div class="input-box">
+      <button type="submit">Submit</button>
+    </div>
+</form>
 </section>
 
 <script>
-  function redirect() {
-    window.location.href = "mainPageForm.html";
-    return false;
+  function showMessage() {
+    alert('YOUR PATIENT ID: ' + localStorage.getItem('patientID') + '. PLEASE USE THIS PATIENT ID TO LOG INTO THE SYSTEM.');
+    return true;
   }
 </script>
 
