--- a/patientDashboard.html
+++ b/patientDashboard.html
@@ -166,10 +166,10 @@
         <h1>MEDICHUB</h1>
         <nav>
             <ul>
-                <li><a href="#" class="nav-button" id="left-button"><img src="https://cdn-icons-png.flaticon.com/128/93/93634.png" alt="Left"></a></li>
-                <li><a href="#" id="about-us-link">About Us</a></li>
-                <li><a href="#" id="services-link">Services</a></li>
-                <li><a href="#" id="contact-link">Contact</a></li>
+                <li><a href="mainPageForm.html" class="nav-button" id="left-button"><img src="https://cdn-icons-png.flaticon.com/128/93/93634.png" alt="Left"></a></li>
+                <li><a href="homePage.html" id="about-us-link">About Us</a></li>
+                <li><a href="homePage.html" id="services-link">Services</a></li>
+                <li><a href="homePage.html" id="contact-link">Contact</a></li>
                 <li><a href="#" class="nav-button" id="right-button"><img src="https://cdn-icons-png.flaticon.com/128/1250/1250699.png" alt="Right"></a></li>
             </ul>
         </nav>
@@ -182,13 +182,46 @@
         </div>
         <div class="main-content">
             <div class="top-buttons">
-                <button>MY PROFILE</button>
+                <button id="profileButton">MY PROFILE</button>
                 <button>APPOINTMENT</button>
-                <button>LOG OUT</button>
+                <button id="logoutButton">LOG OUT</button>
+
             </div>
             <img src="https://i.pinimg.com/564x/c2/44/bc/c244bc97d48fa1aeabaad63dd695053c.jpg" alt="Profile Picture">
             <h2>WELCOME !</h2>
         </div>
     </div>
+<script>
+        console.log("JavaScript is executing!");
+
+        // Check if patientID exists in session
+        var patientID = "<?php echo isset($_SESSION['patientID']) ? $_SESSION['patientID'] : ''; ?>";
+        
+        // If patientID doesn't exist, redirect to login page
+        if (patientID === '') {
+            window.location.href = "mainPageForm.html";
+        }
+
+        // Add event listeners after DOM content is loaded
+        document.addEventListener('DOMContentLoaded', function() {
+            // Add an event listener to the profile button
+            document.getElementById("profileButton").addEventListener("click", function() {
+                // Redirect to profile page using patientID from session
+                window.location.href = "profile.php?patientID=" + patientID;
+            });
+
+            // Add an event listener to the logout button
+            document.getElementById("logoutButton").addEventListener("click", function() {
+                // Display a confirmation dialog
+                var confirmLogout = confirm("Are you sure you want to log out?");
+                
+                // If user confirms logout
+                if (confirmLogout) {
+                    // Redirect to logout page
+                    window.location.href = "logout.php";
+                }
+            });
+        });
+</script>
 </body>
 </html>
