--- a/homePageAdmin.html
+++ b/homePageAdmin.html
@@ -186,7 +186,7 @@
                 <button id="logoutButton" onclick="if (confirm('Are you sure you want to log out?')) window.location.href = 'logout.php'">LOG OUT</button>
             </div>
             <img src="https://i.pinimg.com/564x/b7/35/5d/b7355df9048bccef66e2c2c2d0283e4c.jpg" alt="Profile Picture">
-            <h2 > WELCOME ADMIN !</h2>
+            <h2 > WELCOME ADMIN !!!!</h2>
         </div>
     </div>
 </body>
