--- a/patientDashboard.html
+++ b/patientDashboard.html
@@ -200,7 +200,7 @@
         <div class="main-content">
             <div class="top-buttons">
                 <button id="profileButton" onclick="var userID = document.getElementById('userID').value; console.log('userID:', userID); window.location.href = 'profile.php?userType=patient&userID=' + userID;">MY PROFILE</button>
-                <button id="aptButton" onclick="window.location.href='AppointmnetPage(patient).html'">APPOINTMENT</button>
+                <button id="aptButton" onclick="window.location.href='AppointmentPage(patient).php'">APPOINTMENT</button>
             </div>
             <img src="https://i.pinimg.com/564x/c2/44/bc/c244bc97d48fa1aeabaad63dd695053c.jpg" alt="Profile Picture">
             <h2>WELCOME !</h2>
